Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,57 @@ cache:
 variables:
   # Use the cached directory above.
   MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
+  CI_SSH_KEY: "
+  -----BEGIN OPENSSH PRIVATE KEY-----
+b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAACFwAAAAdzc2gtcn
+NhAAAAAwEAAQAAAgEApwe2K3vWsI8hzsN5kpf6OwVnSkeJFLm5CZ+SqQN68ktESi+hyA1m
+btUXTadI7zv8Y0z4WJy7+IUilCb8ONjjWsWo3sIq56nLx95PiidJQHH7w2bVGaYIOl0fVC
+BlU3dhyrXREQXazyTKlm/pc3jm61m86JrKieSGXYsfRih1e1g+YNQNAPVfr4wIeONaTSe/
+0Pk4I+v2BE/fEaJKM5PBk2zowmLaIky8PfEDUoWUIEIzXqczbNMiE9DPmYEoo4I+F7ihPG
+lQrJa9sPhZH4LFaO9SuLNExGRo/HjbRejk8QsMTEZFPUP7NdVLdMnFBcwMlnsZAoWuCu7F
+grgIQLLEY9YHI5k3mQvh0poYsGIBHc9Jn+RFqGxiJPIPtKDumgJxdPCNHBqaJJBFrxRFQN
+8aT50FDQjU+6qPgbgP6vQMJ9xRGqkqtnLbfP2vPN4DczcwpfQylyrilb38cAbduSiT//Sg
+7b9vohfFsVcRbO3FkMAMhex11JwT0rlLV9bkEV9Szt6F+u2+t81Z7XLrlmw+7mKWOzNEkZ
+V7klBmGn1KO8L7Ho/J8R4LqxM3sY8C7JaV7uRp/Kv9QvlB6f+yiupAJqHqvrUWGvvKpfQa
+yJKdgFZpsG8Gzuwg4dP/YvJHMKbu7mcv9Kkiu1GZSVWDUiAALsix9BiJA7x3DjcIUnevG2
+8AAAc4tTvNyLU7zcgAAAAHc3NoLXJzYQAAAgEApwe2K3vWsI8hzsN5kpf6OwVnSkeJFLm5
+CZ+SqQN68ktESi+hyA1mbtUXTadI7zv8Y0z4WJy7+IUilCb8ONjjWsWo3sIq56nLx95Pii
+dJQHH7w2bVGaYIOl0fVCBlU3dhyrXREQXazyTKlm/pc3jm61m86JrKieSGXYsfRih1e1g+
+YNQNAPVfr4wIeONaTSe/0Pk4I+v2BE/fEaJKM5PBk2zowmLaIky8PfEDUoWUIEIzXqczbN
+MiE9DPmYEoo4I+F7ihPGlQrJa9sPhZH4LFaO9SuLNExGRo/HjbRejk8QsMTEZFPUP7NdVL
+dMnFBcwMlnsZAoWuCu7FgrgIQLLEY9YHI5k3mQvh0poYsGIBHc9Jn+RFqGxiJPIPtKDumg
+JxdPCNHBqaJJBFrxRFQN8aT50FDQjU+6qPgbgP6vQMJ9xRGqkqtnLbfP2vPN4DczcwpfQy
+lyrilb38cAbduSiT//Sg7b9vohfFsVcRbO3FkMAMhex11JwT0rlLV9bkEV9Szt6F+u2+t8
+1Z7XLrlmw+7mKWOzNEkZV7klBmGn1KO8L7Ho/J8R4LqxM3sY8C7JaV7uRp/Kv9QvlB6f+y
+iupAJqHqvrUWGvvKpfQayJKdgFZpsG8Gzuwg4dP/YvJHMKbu7mcv9Kkiu1GZSVWDUiAALs
+ix9BiJA7x3DjcIUnevG28AAAADAQABAAACAFHcajBak8hZhfi3feRWPsnhZpOVhr4VHfZ0
+8iSKc52/PLtdJ92Lj7nfDvo8c/bn/9TNGuQXANsWqPFSQAg+aAMLX625HN0ILzsIHhR4F6
+MRmhHU2rkk0eCE1j9dVzu2hUObo1jD9U7TWcSsGY7B4O7UvsyDXKODUEUVU6EHYDiw8XV0
+R+FB4QEA0QAqcQ3iXtS06ApW8W6AlLOoRdSMZHF0DYmDeCQaVqHG9tlhZU0AFPwdVwtNWO
+S8UJqLnhaw1Oy8TK12chb8FADhXpCef1DkBjdGiPv1uCyQsOrM7zOhtgfF4tZZdIuYO1CE
+ON8T99FiiEnfqYJrLnrX5heLZcs7ndj4z/WmQCuB2hEl5kNBKxzpQ2sGLhSPVjeW//V42P
+qD3HbfZQZ1DuemtKSj9WCMp23taDxkUTE+mIx/1qzW318sv+4+dQgaqoXi8NQ4nnDOenWD
+UW0Spb2TT39PNEP2EzIfSUv2H53GJlLxj6Ycg7r+RPfHLiJvER38ll/Uo7psOnvziQ8WT/
+MvbeOB8MPVWEK/Dafv+ArjWyrhCzW7+SP42Uq3Cz/A+aFLYKlHf0VAr5QhufWLbGx3Ly3x
+Y467IWl05PJ7xwmweg1yukCCzOnLpJgPtk/sTT4I+3uJ9y/mePSvBcdxGkDxJHK4efUPcE
++nhKJv6cOV0/e259udAAABAQCnVQNgocvuWMBeyKEXT7lktPOrqBmusgiUzNh9t/sZdywq
+NqOiCdso8tfS5/Ti6DrEDCe+Jta56hPNk7aqSZY9xq01+zEBmM/s+VZbxJMIzBOTnoFee2
+/N9IGX7Ah58v/m1uPzjlKQZDh2Z1NHIe8SfoL4xmqd3HNhTn22Pp3q0GLZ3nRO1RIF2MhW
+zkjTnPy7xGpBej55TDBy0Dn/Y8+15FuCr3nbMRf4RGq7v/FOwkYZ978DopODJzQDd+5RbH
+gXUkYz6XbYrJkk8C/YVgHBDCvtzXqD0LHyh2xznrGYV+ea96wqUykJLHb+PwnD6ZB5ARXJ
+YAeT3lBmgCGoH4Z7AAABAQDQd91V/6vQ9xz1PyXcVv2fr22wVl4+nwJEXfzNsIvc33uOEU
+APd2qJc1BTn7EAo85m1Pe8nTJpd/VZzh5bz/dV4KwMXznTBdacjFsHwdWEZXiWvfP77dtt
+ZFBsp07nX/cnDAayNy0kjzE4vI4qkaY9cg1hgC3tF1r0it1S87Q0n75zPSAuqodzR9z50B
+jnea3L1j7TniuuNOIBM7As+8kFmFk2IP5NDErYh9MRailkLd6M+7ey8UIaEWCVjx7HuqRg
+VtOsRhdsEPktsBh2Q8QhN6pj2r3KppZh0+x5rhxhxiW4PxBskMUN9NbN7M63mMXSprRlxG
+lfvtCoLiaixZ8DAAABAQDNHSLQTNdEODO8pPINQUKWBmAf1tGfyaAUMHIGKvd+LwZXcv6p
+0N6Z9RhDS+XnJHFwNhiZRNS/NltVP5IdLFv3b37FaxdBfBV6nbgSvJp6lhWF0p9eEYqDQz
+PqBJicqkR9S9Rw9/vOnOoyO4AKiSHn7yumY7MjzHZTCDnpN8MP6j7dsKpVxJ771YzjsVjh
+fXZSxWOQ1ckBHJ95GZohI0uNe1HVbXpjLxZb+8ugACe2V2Zqm8TbWVxAZA+uKss6KUa6nN
+gVLuFwZep8CFgCbweeJeh4OcxKFkqEO6XL6y4vj+lwlDp0bgtcxV4683WVhJ7hbhEqWubt
+iYr44T6VKmAlAAAAAAEC
+-----END OPENSSH PRIVATE KEY-----
+  "
 
 deploy:
     only:
