début cache, 3.1.2  Modifications qui seront validées : 	nouveau fichier : tp3/src/main/java/fr/univlyon1/m1if/m1if03/filters/Cache.java 	modifié :         tp3/src/main/webapp/WEB-INF/web.xml 	modifié :         tp3/src/main/webapp/index.html

--- a/tp3/src/main/webapp/WEB-INF/web.xml
+++ b/tp3/src/main/webapp/WEB-INF/web.xml
@@ -8,9 +8,14 @@
         <filter-class>fr.univlyon1.m1if.m1if03.filters.Auth</filter-class>
     </filter>
     <filter>
+        <filter-name>Cache</filter-name>
+        <filter-class>fr.univlyon1.m1if.m1if03.filters.Cache</filter-class>
+    </filter>
+    <filter>
         <filter-name>ChangeName</filter-name>
         <filter-class>fr.univlyon1.m1if.m1if03.filters.ChangeName</filter-class>
     </filter>
+
     <filter-mapping>
         <filter-name>Auth</filter-name>
         <url-pattern>/*</url-pattern>
@@ -18,5 +23,9 @@
     <filter-mapping>
         <filter-name>ChangeName</filter-name>
         <url-pattern>/connect</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>Cache</filter-name>
+        <url-pattern>/todolist</url-pattern>
     </filter-mapping>
 </web-app>
