--- a/tp4/pom.xml
+++ b/tp4/pom.xml
@@ -20,6 +20,13 @@
   </properties>
 
   <dependencies>
+    <!-- Dépendance pour JWT -->
+    <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt   -->
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>4.4.0</version>
+    </dependency>
     <dependency>
       <groupId>jakarta.servlet.jsp.jstl</groupId>
       <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
