--- a/tp4/src/main/webapp/WEB-INF/web.xml
+++ b/tp4/src/main/webapp/WEB-INF/web.xml
@@ -59,14 +59,6 @@
         <url-pattern>/todos</url-pattern>
     </filter-mapping>
     <filter>
-        <filter-name>CacheFilter</filter-name>
-        <filter-class>fr.univlyon1.m1if.m1if03.filters.CacheFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>CacheFilter</filter-name>
-        <url-pattern>/todos</url-pattern>
-    </filter-mapping>
-    <filter>
         <filter-name>AuthorizationFilter</filter-name>
         <filter-class>fr.univlyon1.m1if.m1if03.filters.AuthorizationFilter</filter-class>
     </filter>
@@ -74,5 +66,14 @@
         <filter-name>AuthorizationFilter</filter-name>
         <url-pattern>/users/*</url-pattern>
         <url-pattern>/todos/*</url-pattern>
+    </filter-mapping>
+    <filter>
+        <filter-name>CacheFilter</filter-name>
+        <filter-class>fr.univlyon1.m1if.m1if03.filters.CacheFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CacheFilter</filter-name>
+<!--        <url-pattern>/todos/*</url-pattern>-->
+        <url-pattern>/todos</url-pattern>
     </filter-mapping>
 </web-app>
