HI DURE LA FIN  Changes to be committed: 	modified:   tp4/src/main/java/fr/univlyon1/m1if/m1if03/filters/CacheUserFilter.java 	modified:   tp4/src/main/webapp/WEB-INF/web.xml

--- a/tp4/src/main/webapp/WEB-INF/web.xml
+++ b/tp4/src/main/webapp/WEB-INF/web.xml
@@ -83,5 +83,6 @@
     <filter-mapping>
         <filter-name>CacheUserFilter</filter-name>
         <url-pattern>/users/*</url-pattern>
+        <url-pattern>/users</url-pattern>
     </filter-mapping>
 </web-app>
