--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,6 @@ deploy:
         - ./ci/setup-mvn-proxy.sh
         - chmod 400 $CI_SSH_KEY
     script:
-        - cd tp4
+        - cd tp5
         - mvn clean package
-        - scp -o StrictHostKeyChecking=no -i $CI_SSH_KEY target/todos.war gitlabci@192.168.75.73:/opt/tomcat/webapps/v3.war
+        - scp -o StrictHostKeyChecking=no -i $CI_SSH_KEY target/todos.war gitlabci@192.168.75.73:/opt/tomcat/webapps/client
