TP4 bugfix CORS

--- a/tp4/src/main/webapp/WEB-INF/web.xml
+++ b/tp4/src/main/webapp/WEB-INF/web.xml
@@ -50,6 +50,10 @@
             <param-name>defaultMIME</param-name>
             <param-value>text/html</param-value>
         </init-param>
+        <init-param>
+            <param-name>cors.exposed.headers</param-name>
+            <param-value>Access-Control-Allow-Origin,Access-Control-Allow-Credentials,Authorization</param-value>
+        </init-param>
     </filter>
     <filter-mapping>
         <filter-name>ContentNegotiationFilter</filter-name>
