Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,4 +20,4 @@ deploy:
     script:
         - cd tp5
         - mvn clean package
-        - scp -o StrictHostKeyChecking=no -i $CI_SSH_KEY target/todos.war gitlabci@192.168.75.73:/opt/tomcat/webapps/client
+        - scp -o StrictHostKeyChecking=no -i $CI_SSH_KEY target/todos-client.war gitlabci@192.168.75.73:/opt/tomcat/webapps/client
