--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,10 @@ deploy:
         - ./ci/setup-mvn-proxy.sh
         - chmod 400 $CI_SSH_KEY
     script:
-        - cd tp5
+        - cd tp4
+        - mvn clean package
+        - scp -o StrictHostKeyChecking=no -i $CI_SSH_KEY target/todos-client.war gitlabci@192.168.75.73:/opt/tomcat/webapps/v3.war
+
+        - cd ../tp5
         - mvn clean package
         - scp -o StrictHostKeyChecking=no -i $CI_SSH_KEY target/todos-client.war gitlabci@192.168.75.73:/opt/tomcat/webapps/client.war
