--- a/tp4/src/main/webapp/WEB-INF/web.xml
+++ b/tp4/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
         <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
         <init-param>
             <param-name>cors.allowed.origins</param-name>
-            <param-value>https://editor-next.swagger.io</param-value>
+            <param-value>https://editor-next.swagger.io,https://192.168.75.73, http://192.168.75.73:8080, http://localhost:8080</param-value>
         </init-param>
         <init-param>
             <param-name>cors.allowed.methods</param-name>
@@ -21,6 +21,10 @@
         <init-param>
             <param-name>cors.allowed.headers</param-name>
             <param-value>Content-Type,Accept,Authorization</param-value>
+        </init-param>
+        <init-param>
+            <param-name>cors.exposed.headers</param-name>
+            <param-value>Access-Control-Allow-Origin, Access-Control-Allow-Credentials, Authorization</param-value>
         </init-param>
     </filter>
     <filter-mapping>
